# STC8MorseCode

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  color.h  configuration.h  main.c  morsecode.c  morsecode.h  morsecodetext.c  morsecodetext_conversion.py  morsecodetext_raw.txt  nelems.h  ws2812.c  ws2812.h
src/implementations/: CMakeLists.txt  color_hueToRgb.c  color_hueToRgbw.c  color_violet.c  color_yellow.c
test/: CMakeLists.txt  test.c  test.cpp
